beta 0.2.0.5 - CPU 	- add support for DepthToSpace & SpaceToDepth ops - OpenGL 	- add Android demo 	- add half / float runtime option 	- add support for ROIPooling, Squeeze 	- fix bugs in conv im2col - OpenCL 	- fix Concat, Eltwise, Reshape bugs - Tools 	- add KL threshold method in quantization tool 	- support optimization for graph with multiple rnn

--- a/demo/android/app/src/main/res/values/array.xml
+++ b/demo/android/app/src/main/res/values/array.xml
@@ -21,6 +21,7 @@
         <item>MoreDemo</item>
         <item>ImageMode</item>
         <item>Portrait</item>
+        <item>OpenGLTest</item>
     </string-array>
 
 
