--- a/project/android/apps/MnnLlmApp/app/src/main/res/menu/menu_chat.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/menu/menu_chat.xml
@@ -10,4 +10,14 @@
         app:showAsAction="never"
         android:checkable="true"
         android:checked="true"/>
+    <item
+        android:id="@+id/menu_item_clear_mmap_cache"
+        android:title="@string/clear_mmap_cache"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_use_mmap"
+        android:title="@string/use_mmap"
+        app:showAsAction="never"
+        android:checkable="true"
+        android:checked="true"/>
 </menu>
