add download checker

--- a/project/android/apps/MnnLlmApp/app/src/main/res/menu/menu_main.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/menu/menu_main.xml
@@ -26,4 +26,9 @@
         android:id="@+id/action_resume_all_downloads"
         android:title="@string/resume_all_downloads"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_check_for_update"
+        android:title="@string/check_for_update"
+        app:showAsAction="never" />
 </menu>
