--- a/apps/Android/MnnLlmChat/app/src/main/res/menu/menu_main.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/menu/menu_main.xml
@@ -29,13 +29,7 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_use_modelscope"
-        android:title="@string/use_model_scope_download"
-        android:checkable="true"
-        android:checked="true"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_check_for_update"
-        android:title="@string/check_for_update"
+        android:id="@+id/action_settings"
+        android:title="@string/settings"
         app:showAsAction="never" />
 </menu>
