feat(*): add neuron adapter api as draft

--- a/project/android/demo/app/src/main/res/values/array.xml
+++ b/project/android/demo/app/src/main/res/values/array.xml
@@ -5,6 +5,8 @@
         <item>OpenCL</item>
         <item>OpenGL</item>
         <item>Vulkan</item>
+        <item>NNAPI</item>
+        <item>Neuron</item>
     </string-array>
     <string-array name="thread_list">
         <item>thread 1</item>
