--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/item_holder_assistant.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/item_holder_assistant.xml
@@ -16,6 +16,7 @@
 
     <TextView
         android:id="@+id/tv_chat_reasoning"
+        android:textColor="?colorOnSurface"
         android:layout_toEndOf="@id/ic_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/space10"
         android:textAppearance="@style/Light"
-        android:textColor="@color/colorTextBlack"
+        android:textColor="?colorOnSurface"
         android:textSize="@dimen/h3"
         android:visibility="visible" />
     <ImageView
@@ -52,6 +53,7 @@
         android:id="@+id/tv_chat_benchmark"
         android:layout_below="@id/image_generated"
         android:layout_alignStart="@id/tv_chat_text"
+        android:textColor="?colorOnSurfaceVariant"
         tools:text="prefill: 149 tokens/s decode: 149 tokens/s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,5 +67,5 @@
         style="@style/SpinKitView.Small.ThreeBounce"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:SpinKit_Color="@color/colorAccent" />
+        app:SpinKit_Color="?colorOnSurface" />
 </RelativeLayout>
