--- a/apps/Android/MnnLlmChat/app/src/main/res/menu/menu_chat.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/menu/menu_chat.xml
@@ -26,6 +26,11 @@
         app:showAsAction="never"
         android:checkable="true"
         android:checked="false" />
+
+    <item
+        android:id="@+id/menu_item_model_settings"
+        android:title="@string/model_settings"
+        app:showAsAction="never" />
 <!--    <item-->
 <!--        android:id="@+id/menu_item_sampler_spinner"-->
 <!--        android:title="@string/sampler"-->
