--- a/apps/Android/MnnLlmChat/app/src/main/res/values-night/colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-night/colors.xml
@@ -17,9 +17,12 @@
     <color name="colorTextInfo">#B3FFFFFF</color>
     <color name="colorGreen">#A5DE40</color>
     <color name="mainBlue">#64B5F6</color>
-    <color name="color_background">#202020</color>
+    <color name="color_background">#111111</color>
     <color name="color_foreground">@android:color/white</color>
     <bool name="is_day_mode">false</bool>
     <bool name="is_night_mode">true</bool>
     <color name="app_theme_color">#329BEA</color>
+    <color name="color_on_surface_variant">#999999</color>
+    <color name="my_color_surface_variant">#222222</color>
+    <color name="my_color_surface">#EEEEEE</color>
 </resources>
