--- a/apps/Android/MnnLlmChat/app/src/main/res/values/colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/colors.xml
@@ -17,10 +17,18 @@
     <color name="colorTextInfo">#9b9b9b</color>
     <color name="colorGreen">#A5DE40</color>
     <color name="mainBlue">#3bb5ee</color>
-    <color name="color_background">@android:color/white</color>
+    <color name="color_background">#FFFFFF</color>
     <color name="color_foreground">@android:color/black</color>
     <bool name="is_day_mode">true</bool>
     <bool name="is_night_mode">false</bool>
     <color name="app_theme_color">#329BEA</color>
+
+    <color name="my_color_surface">#FFFFFF</color>
+    <color name="my_color_surface_variant">#EEEEEE</color>
+    <color name="color_on_surface_variant">#666666</color>
+
+    <color name="color_disabled">#888888</color>
+
+
 
 </resources>
