--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_model.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_model.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="?attr/selectableItemBackground"
+    android:paddingBottom="16dp"
+    >
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/header_section_title"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="12dp"
         app:cardCornerRadius="8dp"
-        android:layout_centerVertical="true"
         app:cardBackgroundColor="@android:color/transparent"
         style="@style/Widget.Material3.CardView.Outlined"
         app:strokeColor="?colorOutlineVariant"
@@ -20,10 +23,10 @@
             android:id="@+id/tvModelName"
             tools:text="Qwen"
             android:layout_gravity="center"
-            android:textSize="@dimen/sp20"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="?colorOnSurface"/>
+            android:textColor="?colorOnSurface" />
         <ImageView
             android:id="@+id/header_section_icon"
             android:src="@drawable/qwen_icon"
@@ -41,10 +44,11 @@
         android:layout_marginStart="14dp"
         android:maxLines="1"
         android:textColor="?colorOnSurface"
-        android:textSize="16sp"
         tools:text="Qwen-Chat-7B"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        style="?textAppearanceBodyMedium"
+        />
 
     <com.alibaba.mnnllm.android.widgets.TagsLayout
         android:id="@+id/tagsLayout"
@@ -75,13 +79,27 @@
         android:layout_toEndOf="@id/header_section_title"
         android:layout_below="@id/tagsLayout"
         android:layout_marginStart="14dp"
-        android:textColor="#666666"
-        android:textSize="14sp"
+        android:textColor="?colorOnSurfaceVariant"
         tools:text="DownloadComplete"
         android:maxLines="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        style="?textAppearanceBodySmall"/>
 
+    <ProgressBar
+        android:id="@+id/download_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_toEndOf="@id/header_section_title"
+        android:layout_below="@id/tvStatus"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="4dp"
+        android:progress="60"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/progress_m2_style" />
     <com.github.ybq.android.spinkit.SpinKitView
         android:id="@+id/download_progress_view"
         android:layout_alignParentEnd="true"
@@ -92,13 +110,5 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
-        app:SpinKit_Color="@color/colorAccent" />
-
-    <!--    <View-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="1dp"-->
-    <!--        android:layout_marginStart="14dp"-->
-    <!--        android:layout_marginEnd="14dp"-->
-    <!--        android:background="#E5E5E5" />-->
+        app:SpinKit_Color="?colorPrimary" />
     </RelativeLayout>
