optimize settings ui

--- a/apps/Android/MnnLlmChat/app/src/main/res/values/styles.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/styles.xml
@@ -46,7 +46,8 @@
     </style>
 
     <style name="SettingsRowLabel" parent="Widget.MaterialComponents.TextView">
-        <item name="android:layout_width">0dp</item> <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">?attr/textAppearanceBodyMedium</item>
         <item name="android:textColor">?attr/colorOnSurface</item>
         <item name="android:layout_marginEnd">8dp</item>
