support thinking ui

--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_model.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_model.xml
@@ -115,7 +115,7 @@
         app:SpinKit_Color="?colorPrimary" />
 
     <ImageView
-        android:id="@+id/iv_more"
+        android:id="@+id/iv_download"
         android:layout_marginEnd="16dp"
         android:layout_width="22dp"
         android:layout_centerVertical="true"
