--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/settings_row_slider.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/settings_row_slider.xml
@@ -9,6 +9,7 @@
         android:id="@+id/label_slider"
         style="@style/SettingsRowLabel"
         tools:text="Slider Label"
+        android:text="TopP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +22,7 @@
         android:minWidth="40dp"
         android:gravity="end"
         tools:text="0.85"
+        android:text="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/seekbar"
         app:layout_constraintStart_toEndOf="@id/label_slider"
